# chm

./: .gitignore  README.md  main.py  pyproject.toml
chm_agent/: __init__.py  cli.py  converter.py  installation_model.py
installation-models/smart-decision/7.3.0/: constraints.json  model.json  model.lock.json  routes.json  steps.jsonl
prompts/: installation-prompts.md
skills/plan-product-installation/: SKILL.md
skills/plan-product-installation/agents/: openai.yaml
skills/plan-product-installation/references/: scenario-profile.md
tests/: test_cli.py  test_converter.py  test_installation_model.py
