[project]
name = "chm"
version = "0.1.0"
description = "Convert CHM documentation into an agent-friendly Markdown knowledge base"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
chm-agent = "chm_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
